--- a/Task6(0)/style.css
+++ b/Task6(0)/style.css
@@ -91,6 +91,7 @@ body {
     .yellow1 {
         width: 100%;
         height: 100%;
+        margin-right: 0px;
     }
     .yellow2,
     .secondtwo {
