--- a/Task4/css/style.css
+++ b/Task4/css/style.css
@@ -1,79 +1,81 @@
-*{
+* {
     margin: 0px;
-
 }
-body{
+body {
     height: 100%;
     padding: 10px;
-
 }
-html{
+html {
     height: 100%;
     padding-left: 10px;
     padding-right: 10px;
-
 }
-.main{
+.main {
     height: 100%;
 }
-.logo{
+.logo {
     background: #38C8FE;
     margin-right: 10px;
 }
-.nav{
+.nav {
     background: #FFAF47;
 }
-.content{
+.content {
     background: #FF7747;
 }
-.info{
+.info {
     background: #FFD54A;
 }
-.navigation{
+.navigation {
     height: 120px;
-    display:flex;
+    display: flex;
 }
-.cont{
+.cont {
     height: 350px;
 }
-.advertisment{
+.advertisment {
     height: 200px;
-    display:flex;
+    display: flex;
 }
-.content, .logo, .nav, .item, .footer, .lastitem{
+.content,
+.logo,
+.nav,
+.item,
+.footer,
+.lastitem {
     height: 100%;
 }
-.item{
+.item {
     background: #FFD647;
     margin-right: 10px;
 }
 .lastitem {
     background: #FFD647;
 }
-.footer-holder{
-  height: 100px;
+.footer-holder {
+    height: 100px;
 }
-.row{
-      padding: 5px;
+.row {
+    padding: 5px;
 }
-.footer{
+.footer {
     background: #FDC1FF;
-    display:flex;
-    align-items:flex-end;
+    display: flex;
+    align-items: flex-end;
 }
-
 /*custom media*/
-@media only screen and (max-width: 767px){
-  .advertisment{
-    height: 400px;
-    display:flex;
-    flex-direction: column;
-  }
-  .item{
-    width: 100%;
-    margin-bottom: 10px;
-  }
-  .lastitem{
-    width: 100%;
-  }
+
+@media only screen and (max-width: 767px) {
+    .advertisment {
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+    }
+    .item {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .lastitem {
+        width: 100%;
+    }
 }
